<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kayhut</groupId>
    <artifactId>fuse</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>data-gen</module>
        <module>fuse-model</module>
        <module>fuse-validator</module>
        <module>fuse-asg</module>
        <module>fuse-dispatcher</module>
        <module>fuse-service</module>
        <module>fuse-axis1</module>
        <module>fuse-axis2</module>
        <module>fuse-test</module>
        <module>geojson-jackson</module>
        <module>fuse-datagen</module>
        <module>fuse-assembly</module>
    </modules>

    <scm>
        <developerConnection>scm:git:http://gita.westeurope.cloudapp.azure.com/fuse/Fuse.git</developerConnection>
      <tag>1.0</tag>
  </scm>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>RELEASE</version>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <top.dir>${project.basedir}</top.dir>
        <version.major>1</version.major>
        <version.minor>11</version.minor>

        <!-- maven checksum plugin -->
        <checksum-maven-plugin.version>1.2</checksum-maven-plugin.version>
        <!-- maven static code analysis -->
        <findbugs.version>3.0.1</findbugs.version>
        <!-- maven git tag plugin -->
        <git-commit-id-plugin.version>2.1.9</git-commit-id-plugin.version>
        <!-- maven checkstyle plugin -->
        <maven-checkstyle-plugin.version>2.12.1</maven-checkstyle-plugin.version>
        <!-- maven dependency plugin -->
        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
        <!-- maven shade plugin (uber-jar)-->
        <maven-shade-plugin.version>2.1</maven-shade-plugin.version>

        <!-- logging -->
        <slf4j-api.version>1.7.21</slf4j-api.version>
        <logback-classic.version>1.1.7</logback-classic.version>

        <!--jooby plugin -->
        <jooby.version>1.0.1</jooby.version>

        <!-- junit testing -->
        <junit.version>4.12</junit.version>
        <easymock.version>3.2</easymock.version>
        <slf4j.version>1.7.13</slf4j.version>
        <rest-assured.version>3.0.1</rest-assured.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby</artifactId>
                <version>${jooby.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-netty</artifactId>
                <version>${jooby.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-scanner</artifactId>
                <version>${jooby.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-jackson</artifactId>
                <version>${jooby.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jooby</groupId>
                <artifactId>jooby-metrics</artifactId>
                <version>${jooby.version}</version>
            </dependency>

            <!-- logging -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback-classic.version}</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>

            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>${easymock.version}</version>
            </dependency>

            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>${top.dir}/src/main/config/checkstyle/checker.xml</configLocation>
                            <suppressionsLocation>${top.dir}/src/main/config/checkstyle/suppressions.xml
                            </suppressionsLocation>
                            <consoleOutput>true</consoleOutput>
                            <headerLocation>${top.dir}/src/main/config/checkstyle/header.txt</headerLocation>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>failsafe-integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                            </goals>
                            <phase>integration-test</phase>
                            <configuration>
                                <threadCount>6</threadCount>
                                <parallel>both</parallel>
                                <argLine>-Xmx1024m</argLine>
                            </configuration>
                        </execution>
                        <execution>
                            <id>failsafe-verify</id>
                            <goals>
                                <goal>verify</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <threadCount>1</threadCount>
                        <perCoreThreadCount>true</perCoreThreadCount>
                        <parallel>both</parallel>
                        <argLine>-Xmx1536m -XX:MaxPermSize=256m -Duser.timezone=${user.timezone}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <!-- todo add bitbucket repo-->
    <repositories />

    <!-- todo profiles -->
    <profiles />

    <distributionManagement>
        <repository>
            <id>nexuss.westeurope.cloudapp.azure.com-snapshots</id>
            <name>nexuss.westeurope.cloudapp.azure.com-snapshots</name>
            <url>https://nexuss.westeurope.cloudapp.azure.com:8443/repository/maven-snapshots/</url>
        </repository>
    </distributionManagement>

</project>